# mpv-subtitleminer

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: release.yml
mpv/: mpv-subtitleminer.lua  run_server.lua
page/src/: App.vue
page/src/components/: MediaConfiguration.vue
page/src/types/: settings.ts
src/: event_loop.rs  media.rs
