[package]
name = "mpv-subtitleminer"
version = "0.1.2"
edition = "2024"

[dependencies]
base64 = "0.22"
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11"
futures-util = "0.3.31"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
uuid = { version = "1.16", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Security",
] }
